# Whispy

./: .gitignore  LICENSE  README.md  package_server.py  server.py
.github/workflows/: ci.yml
client/: README.md  pyproject.toml
client/whispy_client/: __init__.py  core.py
deploy/: cloudflare-worker.js  docker-compose.yml  wrangler.toml
docs/: index.html
examples/: multi_package_tester.py  numpy_tester.py  pandas_tester.py  requests.py  requests_and_numpy.py  requests_tester.py  versioning_tester.py
server/: Dockerfile  app.py  requirements.txt
