[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whispy-client"
version = "1.1.0"
description = "Stream Python packages at runtime — the PyPI CDN client"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []   # zero runtime dependencies — intentional

keywords = ["cdn", "packages", "dynamic-import", "pypi", "runtime"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Installation/Setup",
]

[project.urls]
Homepage = "https://whispy.dev"
Repository = "https://github.com/Dark-Avenger-Reborn/Whispy"
Documentation = "https://whispy.dev/docs"
"Bug Tracker" = "https://github.com/Dark-Avenger-Reborn/Whispy/issues"

[tool.hatch.build.targets.wheel]
packages = ["whispy_client"]
